# Find-reasons-for-seg-fault

./: CMakeLists.txt  CMakeLists.txt~  README.md  doAndRun.sh  run_script.sh
include/: List.h  List.h~
src/: main.cpp  main.cpp~
